Add runtime config for dynamic API_BASE_URL and update fetch logic

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Before the React code runs, the browser first loads the API address in config.js. -->
+    <script src="%PUBLIC_URL%/config.js"></script>   
     <title>Simple To-Do App</title>
     <link rel="mainfest" href="%PUBLIC_URL%/manifest.json" />
   </head>
